z-index issue fixed, project a-tag added to navbar

--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,7 @@ section{
   opacity: 0; */
   right: 50px;
   bottom: -5px;
-  z-index: 996;
+  z-index: 8;
 
   
 
